fixed address spacing

--- a/MainPageStyleSheet.css
+++ b/MainPageStyleSheet.css
@@ -137,7 +137,7 @@ span {
 
 #address_break {
     width: 100%;
-    position: absolute;
+    position: fixed;
     top: 95%;
 }
 
@@ -145,7 +145,7 @@ address {
     margin-left: auto;
     margin-right: auto;
     text-align: center;
-    position: absolute;
+    position: fixed;
     top: 97%;
     width: 100%;
 	font-style: italic; 
